fixed more styles on mobile

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -14,6 +14,7 @@
 
 .input:focus {
     outline: 1px solid var(--primary-color) ;
+    font-size: 1rem;
 }
 
 .message {
