--- a/src/pages/ContactPage/ContactPage.module.css
+++ b/src/pages/ContactPage/ContactPage.module.css
@@ -56,6 +56,7 @@
 
 .text:focus {
     outline: 1px solid var(--primary-color) ;
+    font-size: 1rem;
 }
 
 .second {
@@ -83,13 +84,15 @@
     font-size: 1.5rem;
 }
 
+
+
 @media screen and (min-width: 320px) {
     .first {
         flex-direction: column;
     }
   
     .container {
-        margin-bottom: 240px
+        margin-bottom: 400px
     }
 
 }
