--- a/src/pages/ProjectPage/ProjectPage.module.css
+++ b/src/pages/ProjectPage/ProjectPage.module.css
@@ -16,6 +16,7 @@
     color: var(--font-color);
     gap: 40px;
     padding: 10px 0 40px 0;
+    width: 100%;
 }
 
 .heading {
@@ -55,6 +56,8 @@
 
 .tools {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     list-style: none;
     gap: 20px;
 }
@@ -90,4 +93,10 @@
     height: 98%;
     left: 0;
     top: 0;
+}
+
+@media only screen and (max-width: 768px) {
+    .video {
+        height: 25vh;
+    }
 }
